# longeron

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  PLAN.md  README.md  justfile
mod/: Longeron.sln
mod/Longeron/: Longeron.csproj
mod/Longeron.Native/: Longeron.Native.csproj
mod/Longeron.Native.Probe/: Longeron.Native.Probe.csproj
mod/Longeron.Native.Probe/src/: AbaScenarios.cs  AbaTestRig.cs  Program.cs
mod/Longeron.Native/src/: BodyHandle.cs  InputBuffer.cs  NativeBridge.cs  OutputBuffer.cs  World.cs
mod/Longeron.Physics/: Longeron.Physics.csproj
mod/Longeron.Physics.Tests/: Longeron.Physics.Tests.csproj
mod/Longeron.Physics.Tests/Contact/: NarrowphaseTests.cs
mod/Longeron.Physics.Tests/Math/: float3Tests.cs  float3x3Tests.cs  quaternionTests.cs
mod/Longeron.Physics.Tests/Solver/: ConstraintSolverTests.cs  CouplingTests.cs  FloatingBaseTests.cs  PrismaticSlideTests.cs  RigidStackTowerTests.cs  RneaReciprocityTests.cs  SimplePendulumTests.cs  TopologyTests.cs
mod/Longeron.Physics.Tests/Spatial/: SpatialCrossTests.cs  SpatialInertiaTests.cs  SpatialMatrix6Tests.cs  SpatialTransformTests.cs
mod/Longeron.Physics/src/: ArticulatedBody.cs  ArticulatedScene.cs  Joint.cs
mod/Longeron.Physics/src/Contact/: AabbShape.cs  CapsuleShape.cs  ContactConstraint.cs  ContactManifold.cs  Narrowphase.cs
mod/Longeron.Physics/src/Math/: float3.cs  float3x3.cs  math.cs  quaternion.cs
mod/Longeron.Physics/src/Solver/: ABA.cs  Rnea.cs
mod/Longeron.Physics/src/Spatial/: SpatialCross.cs  SpatialForce.cs  SpatialInertia.cs  SpatialMatrix6.cs  SpatialMotion.cs  SpatialTransform.cs
mod/Longeron/src/: JoltBody.cs  JoltPart.cs  LongeronAddon.cs  LongeronSceneDriver.cs  LongeronVesselModule.cs
mod/Longeron/src/Integration/: AttachAnchors.cs  CbFrame.cs  ColliderWalker.cs  ContactDiscovery.cs  ContactEntry.cs  ContactSolver.cs  DiagLogger.cs  InertiaEstimator.cs  ManagedVessel.cs  PQSStreamer.cs  PartShapeEstimator.cs  QuadBody.cs  SceneRegistry.cs  StaticBody.cs  StaticSceneStreamer.cs  StaticWorld.cs  StressGauge.cs  StressGaugeSystem.cs  TopologyReconciler.cs  VesselScene.cs
mod/Longeron/src/Patches/: KrakensbaneDisable.cs  OrbitDriverKinematicBypass.cs  PartCollisionRelay.cs  PartForceHooks.cs  RigidbodyForceHooks.cs  RigidbodyVelocityPatch.cs  VesselUpdatePosVelPatch.cs
native/: CMakeLists.txt
native/src/: aba.cpp  aba.h  bridge.cpp  bridge.h  contact_listener.cpp  contact_listener.h  contact_solve_listener.cpp  contact_solve_listener.h  layers.h  records.h  spatial.h  tree.cpp  tree.h  world.cpp  world.h
